Fix toolbox label zindex
The toolbox label should be treated as an overlay
because it should overlap everything on the page but
the editoverlay

--- a/ftw/simplelayout/browser/resources/integration.theme.scss
+++ b/ftw/simplelayout/browser/resources/integration.theme.scss
@@ -277,7 +277,7 @@ ul[class^="sl-toolbar"] {
   right: 0;
   top: 0;
   height: 100%;
-  z-index: $zindex-tooltip;
+  z-index: $zindex-overlay - 10;
   display: table;
   background: $color-text;
 
